--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -2,3 +2,13 @@
 dialog {
     position: absolute;
 }
+
+#wakamole {
+    font: inherit;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 2px 1px 5px white;
+    border: 0;
+    padding: 5px 10px;
+}
