--- a/docs/wiktors-sida/css/main.css
+++ b/docs/wiktors-sida/css/main.css
@@ -3,6 +3,13 @@ main.css
 Inkluderas på alla sidor
 */
 
+/*tillbaka*/
+#tillbaka {
+    position: absolute;
+    color: white;
+    left: 20%;
+}
+
 /* Google Font: Special Gothic */
 @import url('https://fonts.googleapis.com/css2?family=Special+Gothic&display=swap');
 
