--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -27,9 +27,17 @@ h1 {
 }
 
 a {
-    color: cyan;
+    color: yellow;
 }
 
 li {
     margin: 20px 0px;
+}
+
+li,p {
+    color: cyan;
+}
+
+p {
+    text-align:justify;
 }
