--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -10,7 +10,7 @@ body {
     background-position: center;
 }
 
-main {
+section {
     background-color: rgb(50, 53, 59);
     padding: 20px;
     margin: 60px auto;
