Mongolietdelen klar (även omstrukturering av sektioner och headings)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -10,6 +10,10 @@ body {
     background-position: center;
 }
 
+img {
+    max-width: 100%;
+}
+
 section {
     background-color: rgb(50, 53, 59);
     padding: 20px;
