--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -22,3 +22,35 @@ dialog {
 #wakamole:hover {
     color: yellow;
 }
+
+.mongo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(60px auto);
+    grid-template-areas: 
+    "m m"
+    "l f";
+}
+
+@media screen and (max-width: 700px){
+    .mongo {
+        grid-template-rows: repeat(60px auto auto);
+        grid-template-areas: 
+        "m m"
+        "l l"
+        "f f";
+    }
+}
+
+.mongotext {
+    grid-area: m;
+}
+
+.mongoflagga {
+    grid-area: f;
+}
+
+.mongolista {
+    grid-area: l;
+}
+
