--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -15,6 +15,20 @@ img {
     max-width: 100%;
 }
 
+header {
+    background-color:
+    rgb(50, 53, 59);
+    color: #fafafa;
+    border-radius: 15px;
+    padding: 15px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 70px;
+    margin: 0;
+    
+}
 section {
     background-color: rgb(50, 53, 59);
     padding: 20px;
@@ -25,10 +39,7 @@ section {
     color: #fafafa;
 }
 
-h1 {
-    text-align: center;
-    
-}
+
 
 a {
     color: yellow;
