--- a/docs/css/spel.css
+++ b/docs/css/spel.css
@@ -1,1 +1,37 @@
 @import "main.css";
+
+.status {
+    background-color: red;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-bottom: 1px;
+    margin-left: 10px;
+}
+
+#kai>* {
+    width: 360px;
+    height: 360px;
+}
+
+#kai {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+#wakamole {
+    font: inherit;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 2px 1px 5px white;
+    border: 0;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+#wakamole:hover {
+    color: yellow;
+}
