Moved j2 to templates

--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -14,9 +14,9 @@
         <h1>GOONES.SE</h1>
         <nav>
             <a href="/">Hem</a>
-            <a href="/articles/">Artiklar</a>
+            <a href="/articles">Artiklar</a>
             <a href="" class="no-link">Resurser</a>
-            <a href="/games/">Spel</a>
+            <a href="/games">Spel</a>
             <a href="" class="no-link">Om oss</a>
         </nav>
     </header>
@@ -29,9 +29,9 @@
         <p class="footer-side">&copy; STEM-klubben 2025</p>
         <nav>
             <a href="/">Hem</a>
-            <a href="/articles/">Artiklar</a>
+            <a href="/articles">Artiklar</a>
             <a href="" class="no-link">Resurser</a>
-            <a href="/games/">Spel</a>
+            <a href="/games">Spel</a>
             <a href="" class="no-link">Om oss</a>
         </nav>
         <p class="footer-side"><a href="https://youtu.be/dQw4w9WgXcQ">Användarvillkor</a></p>
