--- a/templates/articles.html.j2
+++ b/templates/articles.html.j2
@@ -3,7 +3,7 @@
 {% block title %}GOONES.SE - Artiklar{% endblock title %}
 
 {% block head %}
-    <link rel="stylesheet" href="css/artiklar.css">
+    <link rel="stylesheet" href="/css/artiklar.css">
 {% endblock head %}
 
 {% block content %}
