--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -3,7 +3,7 @@
 {% block title %}Goones{% endblock title %}
 
 {% block head %}
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 {% endblock head %}
 
 {% block content %}
@@ -79,5 +79,5 @@
 {% endblock content %}
 
 {% block scripts %}
-    <script src="js/brainrot.js"></script>
+    <script src="/js/brainrot.js"></script>
 {% endblock scripts %}
