anarkokapitalism somalia ahh

--- a/templates/articles.html.j2
+++ b/templates/articles.html.j2
@@ -10,7 +10,7 @@
     <main>
         <section id="featured">
             <h2>Artiklar</h2>
-
+            {% include "articles/somaliaancap.html.j2" %}
             {% include "articles/mongolia.html.j2" %}
             {% include "articles/unprotected_sex.html.j2" %}
             {% include "articles/osterskar.html.j2" %}
