--- a/docs/css/artiklar.css
+++ b/docs/css/artiklar.css
@@ -1,6 +1,6 @@
 @import "main.css";
 
-.stil-1 {
+.article-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(60px auto);
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 700px){
-    .stil-1 {
+    .article-content {
         grid-template-rows: repeat(60px auto auto);
         grid-template-areas: 
         "m m"
@@ -19,56 +19,21 @@
     }
 }
 
-.stil-1-text {
+.article-text {
     grid-area: m;
 }
 
-.stil-1-bild {
+.article-image {
     grid-area: f;
     margin-left: 4px;
 }
 
-.stil-1-lista {
+.article-list {
     grid-area: l;
 }
 
-.stil-1-avslut {
+.article-credits {
     display: flex;
     justify-content: space-between;
     width: 100%;
-}
-
-.stil-2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(60px auto);
-    grid-template-areas: 
-    "m m"
-    "l f";
-}
-
-@media screen and (max-width: 700px){
-    .stil-2 {
-        grid-template-rows: repeat(60px auto auto);
-        grid-template-areas: 
-        "m m"
-        "l l"
-        "f f";
-    }
-}
-
-.stil-2-text {
-    grid-area: m;
-}
-
-.stil-2-nedre-text {
-    grid-area: l;
-    margin: auto;
-    margin-left: 40px;
-    margin-right: 40px;
-}
-
-.stil-2-bild {
-    grid-area: f;
-    margin-left: 4px;
 }
