--- a/templates/articles/mongolia.html.j2
+++ b/templates/articles/mongolia.html.j2
@@ -27,7 +27,7 @@
     </div>
 
     <div class="article-image">
-        <img src="img/mongolia.png" alt="Mongoliska flaggan">
+        <img src="/img/mongolia.png" alt="Mongoliska flaggan">
         <p class="article-credit">
             <span>
                 Bild: <a
