--- a/templates/articles/osterskar.html.j2
+++ b/templates/articles/osterskar.html.j2
@@ -22,7 +22,7 @@
     </div>
 
     <div class="article-image">
-        <img src="img/osterskar.jpg" alt="Mongoliska flaggan">
+        <img src="/img/osterskar.jpg" alt="Mongoliska flaggan">
         <p class="article-credit">
             <span>
                 Bild: <a
