--- a/templates/articles/somaliaancap.html.j2
+++ b/templates/articles/somaliaancap.html.j2
@@ -20,7 +20,7 @@
     </div>
 
     <div class="article-image">
-        <img src="img/ancap.jpg" alt="Anarkokapitalism">
+        <img src="/img/ancap.jpg" alt="Anarkokapitalism">
         <p class="article-credit">
             <span>
                 Skribent: <a href="" class="author">Saxhytt</a>
