--- a/templates/articles/unprotected_sex.html.j2
+++ b/templates/articles/unprotected_sex.html.j2
@@ -22,7 +22,7 @@
     </div>
 
     <div class="article-image">
-        <img src="img/kondom.jpg" alt="Symbol för säkrare sex">
+        <img src="/img/kondom.jpg" alt="Symbol för säkrare sex">
         <p class="article-credit">
             <span>
                 Bild: <a
