--- a/templates/games.html.j2
+++ b/templates/games.html.j2
@@ -46,3 +46,8 @@
     </main>
 
 {% endblock content %}
+
+{% block scripts %}
+    <script src="/js/games.js"></script>
+    <script src="/js/snake.js"></script>
+{% endblock scripts %}
