--- a/templates/articles/somaliaancap.html.j2
+++ b/templates/articles/somaliaancap.html.j2
@@ -6,21 +6,21 @@
 {% block content %}
 
     <p class="article-text">
-        
+        Somalia kan i många avseenden ses som en anarkokapitalistisk utopi, men stämmer detta påstående verkligen? Låt oss undersöka det kortfattat!
     </p>
 
     <div class="article-list">
         <p></p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Somalias regering saknar delvis kontroll över stora delar av landet, vilket kan efterliknas vid ett anarkokapitalistiskt tillstånd. Å andra sidan har mindre klaner tagit kontroll över stora delar av landet, något som verkligen inte är anarkistiskt på något sätt.</li>
+            <li>Somalias ekonomi har på senare tid blivit bättre, vilket man kan tolka är på grund av avsaknaden av en regering då marknadsekonomin har fått flöda fritt. Detta är dock inte ett hållbart argument då landet inte riktigt har en stabil valuta, och därför har svårt att vara kapitalistiskt.</li>
+            <li>En stor del av anarkismen är att det inte ska finnas några militära makter, men dessa har bildats som påföljd av saknaden av kontroll i landet.</li>
         </ul>
-        <p></p>
+        <p>Det verkar som att Somalia inte är en anarkokapitalistisk utopi, men det är verkligen det landet som kommit närmast i modern historia. Just nu är Somalia ett instabilt klanvälde och därmed långt ifrån den anarkistiska idén om avsaknaden av en stat.</p>
     </div>
 
     <div class="article-image">
-        <img src="/img/ancap.jpg" alt="Anarkokapitalism">
+        <img src="img/ancap.jpg" alt="Anarkokapitalism tolkad som en meme">
         <p class="article-credit">
             <span>
                 Skribent: <a href="" class="author">Saxhytt</a>
@@ -28,4 +28,4 @@
         </p>
     </div>
 
-{% endblock content %}
+{% endblock content %} 
