--- a/docs/css/spel.css
+++ b/docs/css/spel.css
@@ -73,11 +73,19 @@ dialog {
 /*slots*/
 
 .slot {
-    transform: translate(0, -000px);
+    transform: translate(0, -154px);
 }
 
 .slot-div {
     width: 154px;
-    height: 154px;
-    
+    height: 462px;
+    overflow: hidden;
+}
+
+#slot-container {
+    display: flex;
+    flex-direction: row;
+    width: 770px;
+    height: 462px;
+    margin: 0 auto;
 }
