--- a/templates/games.html.j2
+++ b/templates/games.html.j2
@@ -46,10 +46,29 @@
 
         <section>
             <h2>Slots</h2>
-            <div class="slot-div">
-                <img class="slot" src="img/slot1.webp" alt="">
-                <p>Lägg ägg i kungens skägg</p>
+            <div id="slot-container">
+                <div class="slot-div">
+                    <img class="slot" src="img/slot1.webp" alt="">
+                    <p>Lägg ägg i kungens skägg</p>
+                </div>
+                <div class="slot-div">
+                    <img class="slot" src="img/slot1.webp" alt="">
+                    <p>Lägg ägg i kungens skägg</p>
+                </div>
+                <div class="slot-div">
+                    <img class="slot" src="img/slot1.webp" alt="">
+                    <p>Lägg ägg i kungens skägg</p>
+                </div>
+                <div class="slot-div">
+                    <img class="slot" src="img/slot1.webp" alt="">
+                    <p>Lägg ägg i kungens skägg</p>
+                </div>
+                <div class="slot-div">
+                    <img class="slot" src="img/slot1.webp" alt="">
+                    <p>Lägg ägg i kungens skägg</p>
+                </div>
             </div>
+            
             
             <a href="https://www.vecteezy.com/free-vector/slot-machine-icon">Slot Machine Icon Vectors by Vecteezy</a>
         </section>
