Fix wakamole script

--- a/templates/games.html.j2
+++ b/templates/games.html.j2
@@ -50,4 +50,5 @@
 {% block scripts %}
     <script src="/js/games.js"></script>
     <script src="/js/snake.js"></script>
+    <script src="/js/brainrot.js"></script>
 {% endblock scripts %}
