--- a/templates/article.html.j2
+++ b/templates/article.html.j2
@@ -8,6 +8,8 @@
 
 {% block content %}
     <main>
-        {% include "articles/" + article + ".html.j2" %}
+        <section>
+            {% include "articles/" + article + ".html.j2" %}
+        </section>
     </main>
 {% endblock content %}
