bugfix: study tips was red

--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -17,7 +17,7 @@
             <a href="/articles">Artiklar</a>
             <a href="" class="no-link">Resurser</a>
             <a href="/games">Spel</a>
-            <a href="/studytips" class="no-link">Pluggtips</a>
+            <a href="/studytips">Pluggtips</a>
         </nav>
     </header>
 
