Add descriptions to every page

--- a/templates/article.html.j2
+++ b/templates/article.html.j2
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/css/artiklar.css">
 {% endblock head %}
 
+{% block description %}
+{{ article }} - En artikel på Goones.se
+{% endblock description %}
+
 {% block content %}
     <main>
         <section>
