--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/css/index.css">
 {% endblock head %}
 
+{% block description %}
+Goones - En plats för skratt, gemenskap och massiva memes!
+{% endblock description %}
+
 {% block content %}
     <main>
         <section>
