--- a/templates/studytips.html.j2
+++ b/templates/studytips.html.j2
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/css/pluggtips.css">
 {% endblock head %}
 
+{% block description %}
+Goones studietekniker och tips!
+{% endblock description %}
+
 {% block content %}
 
     <main>
