--- a/templates/articles.html.j2
+++ b/templates/articles.html.j2
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/css/artiklar.css">
 {% endblock head %}
 
+{% block description %}
+Goones-tidningen! Från Kanadavalet till Mongoliets börsmarknad..
+{% endblock description %}
+
 {% block content %}
     <main>
         <section id="featured">
