--- a/templates/games.html.j2
+++ b/templates/games.html.j2
@@ -7,6 +7,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
 {% endblock head %}
 
+{% block description %}
+Spel!
+{% endblock description %}
+
 {% block content %}
 
     <main>
