Fixade länk i footer till pluggtips

--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -32,7 +32,7 @@
             <a href="/articles">Artiklar</a>
             <a href="" class="no-link">Resurser</a>
             <a href="/games">Spel</a>
-            <a href="" class="no-link">Om oss</a>
+            <a href="/studytips">Pluggtips</a>
         </nav>
         <p class="footer-side"><a href="https://youtu.be/dQw4w9WgXcQ">Användarvillkor</a></p>
     </footer>
