--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -17,6 +17,16 @@
 
     {% block head %}{% endblock head %}
 
+    <link rel="icon" type="image/png" href="/img/thumb/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/img/thumb/favicon.svg" />
+    <link rel="shortcut icon" href="/img/thumb/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/thumb/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="{{ title() }}">
+    <meta name='apple-mobile-web-app-capable' content='yes'>
+    <meta name='apple-touch-fullscreen' content='yes'>
+    <meta name='apple-mobile-web-app-status-bar-style' content='black'>
+    <link rel="manifest" href="/img/thumb/site.webmanifest" />
+
     <meta name='keywords' content='goones, {{ title() }}'>
     <meta name='description' content='{{ description() }}'>
     <meta name='author' content='STEM-klubben'>
@@ -27,14 +37,6 @@
     <meta name='og:image' content='{{ img() }}'>
     <meta name='og:site_name' content='Goones'>
     <meta name='og:description' content='{{ description() }}'>
-
-    <meta name="apple-mobile-web-app-title" content="{{ title() }}">
-    <meta name='apple-mobile-web-app-capable' content='yes'>
-    <meta name='apple-touch-fullscreen' content='yes'>
-    <meta name='apple-mobile-web-app-status-bar-style' content='black'>
-
-    <link href='/img/thumb/apple-touch-icon.png' rel='apple-touch-icon' type='image/png'>
-    <link href='/img/thumb/touch-icon-ipad.png' rel='apple-touch-icon' sizes='72x72'>
 </head>
 
 <body>
