--- a/templates/article.html.j2
+++ b/templates/article.html.j2
@@ -1,6 +1,6 @@
 {% extends "base.html.j2" %}
 
-{% block title %}GOONES.SE - {{ article }}{% endblock title %}
+{% block title %}Goones - {{ article }}{% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/artiklar.css">
