--- a/templates/studytips.html.j2
+++ b/templates/studytips.html.j2
@@ -1,6 +1,6 @@
 {% extends "base.html.j2" %}
 
-{% block title %}Pluggtips{% endblock title %}
+{% block title %}Goones - Pluggtips{% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/pluggtips.css">
