--- a/templates/articles.html.j2
+++ b/templates/articles.html.j2
@@ -1,6 +1,6 @@
 {% extends "base.html.j2" %}
 
-{% block title %}GOONES.SE - Artiklar{% endblock title %}
+{% block title %}Goones - Artiklar{% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/artiklar.css">
