--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -36,7 +36,7 @@ Goones - En plats för skratt, gemenskap och massiva memes!
         <section id="featured">
             <h2>Featured Articles</h2>
 
-            {% include "articles/russiaships.html.j2" %}
+            {% include "articles/papa.html.j2" %}
         </section>
 
         <section>
