--- a/templates/articles.html.j2
+++ b/templates/articles.html.j2
@@ -14,6 +14,7 @@ Goones-tidningen! Från Kanadavalet till Mongoliets börsmarknad..
     <main>
         <section id="featured">
             <h2>Artiklar</h2>
+            {% include "articles/papa.html.j2" %}
             {% include "articles/canadaelection.html.j2" %}
             {% include "articles/russiaships.html.j2" %}
             {% include "articles/somaliaancap.html.j2" %}
