stavfel ahh semantikus

--- a/templates/articles/papa.html.j2
+++ b/templates/articles/papa.html.j2
@@ -6,8 +6,8 @@
 {% block content %}
 
 <p class="article-text">
-    Strax efter 18-tiden idag 8/5 rök det vitt ur skorstenen i Rom. Runt 80 minuter senare fick världen veta den nya
-    påven var. Hans namn är <b>Robert Francis Prevost</b> och hans påvenamn blir <b>Leo XIV</b>. Efter drygt ett dygn i konklaven
+    Strax efter 18-tiden idag 8/5 rök det vitt ur skorstenen i Rom. Runt 80 minuter senare fick världen veta vem den nya
+    påven var. Hans namn är <strong>Robert Francis Prevost</strong> och hans påvenamn blir <strong>Leo XIV</strong>. Efter drygt ett dygn i konklaven
     lyckades kardinalerna enas. Förra påven Franciskus krävde tre gånger så lång tid för att bli utsedd.
 </p>
 
