--- a/templates/articles/gelatofabricato.html.j2
+++ b/templates/articles/gelatofabricato.html.j2
@@ -20,7 +20,7 @@
     </div>
 
     <div class="article-image">
-        <img src="img/gelato.png" alt="Glass hos Oooh' Gelato">
+        <img src="img/gelato.webp" alt="Glass hos Oooh' Gelato">
         <p class="article-credit">
             <span>
                 Skribent: <a href="" class="author">Saxhytt</a>
