Bytt namn  (två b i fabbricato)

--- a/templates/articles/gelatofabbricato.html.j2
+++ b/templates/articles/gelatofabbricato.html.j2
@@ -1,6 +1,6 @@
 {% extends "articles/base.html.j2" %}
 
-{% block id %}gelatofabricato{% endblock id %}
+{% block id %}gelatofabbricato{% endblock id %}
 {% block header %}Är det värt ett besök hos Oooh' Gelato?{% endblock header %}
 
 {% block content %}
