--- a/templates/articles/gelatofabbricato.html.j2
+++ b/templates/articles/gelatofabbricato.html.j2
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    <p class="article-text">
+    <p class="article-text"> <!--Kommentar-->
         Jag och två andra utvecklare på Goones var och besökte Oooh' Gelato i Täby Centrum för att se om det lever upp förväntningarna. Vi beställde två stycken vaniljkulor i en bägare. 
     </p>
 
