--- a/templates/articles/gelatofabbricato.html.j2
+++ b/templates/articles/gelatofabbricato.html.j2
@@ -6,15 +6,15 @@
 {% block content %}
 
     <p class="article-text"> <!--Kommentar-->
-        Jag och två andra utvecklare på Goones var och besökte Oooh' Gelato i Täby Centrum för att se om det lever upp förväntningarna. Vi beställde två stycken vaniljkulor i en bägare. 
+        Jag och två andra utvecklare på Goones var och besökte Oooh' Gelato i Täby Centrum för att se om det lever upp till förväntningarna. Vi beställde två stycken vaniljkulor i en bägare. 
     </p>
 
     <div class="article-list">
         <p></p>
         <ul>
-            <li>Service: 7/10<br>Servicen på Oooh' Gelato var mycket proffesionell och tillbakalutad på ett positivt sätt. Det gick fort att få vår glass och de delade gärna ut extra bägare och skedar då vi skulle dela på glassen. Det enda klagomålet jag har är att de tappade glassen ner i sitt bort en gång.</li>
+            <li>Service: 7/10<br>Servicen på Oooh' Gelato var mycket proffesionell och tillbakalutad på ett positivt sätt. Det gick fort att få vår glass och de delade gärna ut extra bägare och skedar då vi skulle dela på glassen. Det enda klagomålet jag har är att de tappade glassen ner i sitt bord en gång.</li>
             <li>Pris/smak: 8/10<br>Dessa två kulor kostade 68 kronor, vilket kan tänkas vara dyrt, men smaken får vem som helst att tänka om! Det är svårt att beskriva hur god och gräddig glassen smakade. Jag skulle solklart påstå att det är den godaste glassen i Täby Centrum.</li>
-            <li>Upplevelse: 10/10<br>Upplevelsen hos Oooh' Gelato kan endast beskrivas med positiva ord. Det är ett mysigt ställe med ett fint torg i närheten, verkligen ett perfekt ställe för glass oavsett väder.</li>
+            <li>Upplevelse: 10/10<br>Upplevelsen hos Oooh' Gelato kan endast beskrivas med positiva ord. Det är ett mysigt ställe på ett fint torg, verkligen ett perfekt ställe för glass oavsett väder.</li>
         </ul>
         <p>Att äta på Oooh' Gelato är en upplevelse som jag rekommenderar till alla utöver något annat. Trots regnigt väder var det en fantastisk upplevelse, utan tvekan ett minne för livet. Överlag 8/10!</p>
     </div>
