xi huang ti kung av qin

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -16,11 +16,11 @@ Goones - En plats för skratt, gemenskap och massiva memes!
             <h2>Välkommen!</h2>
             <h3>Visionen</h3>
 
-            <p>Välkommen till GOONES.SE Välkommen till den ultimata meme-hemsidan skapad av självaste Shi Huangdi, Kinas
-                förste kejsare! Här blandas gammalt och nytt när klassiska Qin-dynasti-vitsar möter moderna
-                internetfenomen. Shi Huangdi ville ena riket, men nu enar han världen genom skratt. Utforska tusentals
-                memes med kejserlig kvalitet, handplockade för att ge dig ett leende värdigt en kejsare. Börja din resa
-                genom skrattens rike idag!</p>
+            <p>Välkommen till GOONES.SE Välkommen till den perfekta nyhetshemsidan skapad av självaste Shi Huangdi, Kinas
+                förste kejsare! Här blandas gammalt och nytt när Qin-dynastin möter moderna
+                händelser. Shi Huangdi ville ena riket, men nu enar han världen genom artiklar. Utforska tusentals
+                aktiviteter med kejserlig kvalitet, handplockade för att ge dig ett leende värdigt en kejsare. Börja din resa
+                genom Qins rike idag!</p>
 
             <h3>Resurser</h3>
 
