--- a/templates/games.html.j2
+++ b/templates/games.html.j2
@@ -73,9 +73,9 @@ Spel!
                 </div>
             </div>
             <div class="spread" id="slot-controls">
-                <button class="game-button" onclick="randomAll(spinTime);">Roll</button>
-                <button class="game-button" onclick="spinTime=0">Instant</button>
-                <button class="game-button" onclick="spinTime=1">Normal</button>
+                <button class="game-button" onclick="randomAll(3);">Roll</button>
+                <button class="game-button" onclick="isInstant=true">Instant</button>
+                <button class="game-button" onclick="isInstant=false">Normal</button>
                 <a href="https://www.vecteezy.com/free-vector/slot-machine-icon">Slot Machine Icon Vectors by Vecteezy</a>
             </div>
             
