Bättre aspect och webp

--- a/templates/articles/ye.html.j2
+++ b/templates/articles/ye.html.j2
@@ -31,7 +31,7 @@
 
 
 <div class="article-image">
-    <img src="/img/ye.jpg" alt="Kanye West">
+    <img src="/img/ye.webp" alt="Kanye West">
     <p class="article-credit">
         <span>
             Bild: "<a href="https://commons.wikimedia.org/wiki/File:Kanye_West_by_David_Shankbone_%283465084618%29.jpg" target="_blank">Kanye West</a>"
