--- a/templates/articles/garbage.html.j2
+++ b/templates/articles/garbage.html.j2
@@ -33,7 +33,7 @@
 </div>
 
 <div class="article-image">
-    <img src="img/GARBAGEDUMP.jpeg" alt="ANIME BILD">
+    <img src="img/GARBAGE.png" alt="SKRÄP.png">
     <p class="article-credit">
         <span>
             Skribent: <a href="" class="author">Annoying orange</a>
