--- a/templates/articles.html.j2
+++ b/templates/articles.html.j2
@@ -14,6 +14,7 @@ Goones-tidningen! Från Kanadavalet till Mongoliets börsmarknad..
     <main>
         <section id="featured">
             <h2>Artiklar</h2>
+            {% include "articles/garbage.html.j2" %}
             {% include "articles/plastpase.html.j2" %}
             {% include "articles/cosines.html.j2" %}
             {% include "articles/ye.html.j2" %}
