--- a/templates/articles/garbage.html.j2
+++ b/templates/articles/garbage.html.j2
@@ -1,13 +1,13 @@
 {% extends "articles/base.html.j2" %}
 
-{% block id %}Battle of the garbage dump{% endblock id %}
-{% block header %}Har kriget mellan pakistan och indien en koppling till haikyuu?{% endblock header %}
+{% block id %}garbage{% endblock id %}
+{% block header %}Har kriget mellan Pakistan och Indien en koppling till Haikyuu?{% endblock header %}
 
 {% block content %}
 
 <p class="article-text">
-    Kriget som tagit världen med storm kan minst sagt kallas garbage. Battle of the garbage nästan, detta då indier är
-    kända föpr sin ovillighet att duscha. Men Pakistan är inte direkt en rosenträdgård heller.</p>
+    Kriget som tagit världen med storm kan minst sagt kallas garbage. ████████ ███ ████ █, █████ ██ ██████ ██
+    █████ ███ ███ ██████████ ███ ██████. Men Pakistan är inte direkt en rosenträdgård heller.</p>
 
 <div class="article-list">
     <p></p>
@@ -18,18 +18,21 @@
             Analytiker misstänker nu att generalstaben använder sportanime som psykologisk krigsföring.
         </li>
         <li>
-            Det kanske tydligaste beviset för kopplingen är hur Indiens sopberg vuxit parallellt med krigsretoriken.
+            █████ ██ ██████ ██
+    █████ ███ ███ ██████████ ███ ██████.
             Enligt en FN-rapport luktar vissa delar av New Delhi numera så starkt att satelliter plockar upp
-            ammoniakångorna. "Det är som att hela nationen tränar för en verklig 'Battle at the Garbage Dump'", sa en
-            anonym diplomat under ett möte i Genève. Pakistan å sin sida bidrar inte direkt till renhetens ära. Karachi
-            har beskrivits som "en stad där sopor, getter och regeringen lever i total symbios.
+            ammoniakångorna. "█████ ██ ██████ ██
+    █████ ███ ███ ██████████ ███ ██████", sa en
+            anonym diplomat under ett möte i Genève. █████ ██ ██████ ██
+    █████ █████████ ███ ██████. Karachi
+            har beskrivits som "████████ ████████████ ████████".
         </li>
 
     </ul>
     <p>
         Mycket lutar mot att indien och Pakistan är i krig på grund av en missförstådd referens till Haikyuu filmen
-        "battle of the garbage dump".
-    </p>
+        "██████  ██████ ████████ ███ █".
+    </p> 
 </div>
 
 <div class="article-image">
