--- a/templates/articles/facts.html.j2
+++ b/templates/articles/facts.html.j2
@@ -7,7 +7,7 @@
 
 <p class="article-text">
     Förra året släppte den ökända artisten Tom MacDonald en hiphop-låt vid namn "Facts" tillsammans med Daily
-    Wire-personligheten Ben Shapiro. Låten fick väldigt mycket kritik pga av extremt tydlig transfobi, racism etc.
+    Wire-personligheten Ben Shapiro. Låten fick väldigt mycket kritik på grund av extremt tydlig transfobi, rasism etc.
     Nu, 16 månader efter, känner jag att det är passande att reviewa Bens feature från ett opartiskt perspektiv och
     bortse från artisternas kontroverser.
 </p>
@@ -22,15 +22,15 @@
             flow.</li>
         <li>Klädsel: 4/10<br>Ben Shapiro bär en hoodie med ett tryck på. Jag tycker att den inte passar honom alls som
             medelåldersgubbe. Jag fann detta citat under musikvideon som kändes värd att ta upp: "Ben looks like
-            that's the first time he has ever worn a hoodie and he doesn't like it". Under den sista halvan har han en
+            that's the first time he has ever worn a hoodie and he doesn't like it". Under den sista hälften har han en
             kostym vilket är mycket snyggare.</li>
         <li>Lyrics: 6/10<br>Texten är det som står ut mest i låten. Positivt är att han lyckas nämna en del
             popkulturhändelser och håller sig relevant. Som en wokie själv känner man sig definitivt dissad efter att
-            man har lyssnat. Mina favoritbars är bland annat den tvetydiga "Dawg, its's a yarmulke, homie, no cap" som
+            man har lyssnat. Mina favoritbars är bland annat den tvetydiga "Dawg, it's a yarmulke, homie, no cap" som
             är elegant och imponerande. Ett annat exempel är "My money like Lizzo, my pockets are fat" för att den är så
             sjuk. Man kan anse att den baren är lite fatfobisk vilket är ett rimligt klagomål. Låten i sin helhet är
             väldigt dömande och rasistisk/homofobisk men jag tycker det är positivt att detta inte finns i alls lika
-            stor utsräckning i Bens feature vilket räddar ratingen.</li>
+            stor utsträckning i Bens feature vilket räddar ratingen.</li>
     </ul>
     <p>För att sammanfatta är hans feature välproducerad med välgjord och genomtänkt text men personligen skulle jag
         valt en annan klädsel. Personligen håller jag inte alls med Ben politiskt och blir därför äcklad av låten som
