Bild med attribution

--- a/templates/articles/leo.html.j2
+++ b/templates/articles/leo.html.j2
@@ -36,13 +36,12 @@
 </div>
 
 <div class="article-image">
-    <img src="/img/carney.jpg" alt="Val i Kanada 2025">
+    <img src="/img/bollhav.jpg" alt="Val i Kanada 2025">
     <p class="article-credit">
         <span>
-            Bild: "<a href="https://www.flickr.com/photos/worldeconomicforum/6777361543" target="_blank">Mark
-                Carney</a>"
+            Bild: "<a href="https://www.flickr.com/photos/nyberg_fredrik/6015840584" target="_blank">Elsa i bollhavet</a>"
             by
-            <a href="https://www.flickr.com/photos/worldeconomicforum/" target="_blank">World Economic Forum</a>
+            <a href="https://www.flickr.com/photos/nyberg_fredrik/" target="_blank">Fredrik Nyberg</a>
             is licensed under
             <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/" target="_blank">CC BY-NC-SA 2.0</a>
         </span>
