--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -33,7 +33,7 @@
 
     <meta name='og:title' content='{{ title() }}'>
     <meta name='og:type' content='website'>
-    <meta name='og:url' content='{{ url }}'>
+    <meta name='og:url' content='{{ request.url }}'>
     <meta name='og:image' content='{{ img() }}'>
     <meta name='og:site_name' content='Goones'>
     <meta name='og:description' content='{{ description() }}'>
